Swift: CMake 3.15.{0,1} broken when project adds INTERFACE libraries
Repro: CMakelists.txt:
cmake_minimum_required(VERSION 3.15)
project(P LANGUAGES Swift)
add_library(L INTERFACE)
Command: cmake . -GXcode
Results:
-- The Swift compiler identification is Apple 5.0.1
-- Check for working Swift compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc
-- Check for working Swift compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -- works
-- Configuring done
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "HAS_CXX" is not allowed.
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "LINKER_LANGUAGE" is not allowed.
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "HAS_CXX" is not allowed.
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "LINKER_LANGUAGE" is not allowed.
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "HAS_CXX" is not allowed.
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "LINKER_LANGUAGE" is not allowed.
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "HAS_CXX" is not allowed.
CMake Error at CMakeLists.txt:3 (add_library):
INTERFACE_LIBRARY targets may only have whitelisted properties. The
property "LINKER_LANGUAGE" is not allowed.
Related conversation: !3607 (closed)
Edited by Brad King